--- a/CampfireCooking/package.json
+++ b/CampfireCooking/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
-    "@tanstack/react-query": "^5.87.4",
+    "@react-navigation/native": "^7.1.17",
+    "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.2",
     "expo": "~54.0.6",
     "expo-constants": "~18.0.8",
@@ -43,7 +45,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.5.1",
     "zod": "^4.1.8"
   },
   "devDependencies": {
